# flood-model

./: .dockerignore  .gitignore  Dockerfile.inf  Dockerfile.train  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements-inf.txt  requirements-train.torch.txt  requirements-train.txt  requirements_inf.txt  requirements_train.txt  run_inference.cwl  run_inference_input.yml
checkpoints/: Sen1Floods11_0_0.5194225907325745.onnx
notebooks/: demo.ipynb  train.ipynb
src/: data_processing.py  evaluation.py  inference.py  model.py  resnet50.py  train.py
workflows/: inference-eo.cwl  inference-eo.eodag.cwl  inference.cwl
