[tool.poetry]
name = "sen1floods11"
version = "0.1.0"
description = ""
authors = ["cyouri-csgroup <youri.colera@csgroup.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
torchvision = "^0.20.0"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
rasterio = "^1.4.1"
mlflow = "^2.17.1"
onnx = "^1.17.0"
onnxruntime = "^1.20.0"
datasets = {extras = ["s3"], version = "^3.1.0"}
python-dotenv = "^1.0.1"
dvc = {extras = ["s3"], version = "^3.58.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
